# react-native-tcp-socket

android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  cpp-adapter.cpp
android/src/main/java/com/asterinet/react/tcpsocket/: TcpEventListener.java  TcpSocketModule.java  TcpSocketRegistry.java
lib/types/: Socket.d.ts  index.d.ts
src/: Socket.js  index.js
